--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -95,6 +95,8 @@ header {
   width: 100%;
   display: flex;
   margin: 20px;
+  border: 1px solid rgb(108, 104, 104);
+  margin-bottom: 60px; /* pour sortir du halo */
 } 
 
 nav{
@@ -130,10 +132,12 @@ li{
 }
 
 .main-container{
+  border: 1px solid rgb(108, 104, 104);
   width: 100%;
   display: flex;
   justify-content: center;
   height: 400px;
+  z-index: 10;
 }
 .main-title{
   display: flex;
@@ -163,7 +167,7 @@ h1{
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 25px;
+  border-radius: 20px;
   width: 200px;  
   text-align: center;
   margin: 20px;
@@ -172,16 +176,25 @@ h1{
 }
 #btnInfo{
   height: 30px;
-  position: relative; /* important pour que z-index marche */
-  z-index: 10;        /* passe au-dessus du halo */
+  z-index: 10;
+  /* test effet glass*/
+  background: rgba(133, 129, 129, 0.066);
+  box-shadow: 0 4px 30px rgba(88, 88, 88, 0.002);
+  backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(5px);
 }
 #btnForm{
   height: 40px;
-  background-color:#D451E0;
+ /* background-color:#D451E0;*/
   color: black;
   font-weight: bold;
   margin: 50px;
   border: none;
+  /* test effet glass*/
+  background: rgba(242, 65, 233, 0.705);
+  box-shadow: 0 4px 30px rgba(176, 170, 170, 0.052);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(5px);
 }
 footer{
   display: flex;
