--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,6 @@
+
+
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -135,6 +138,7 @@ li{
   border: 1px solid rgb(108, 104, 104);
   width: 100%;
   display: flex;
+  margin-top: 20px;
   justify-content: center;
   height: 400px;
   z-index: 10;
@@ -204,4 +208,59 @@ footer{
 
 footer a{
   margin: 35px;
+}
+
+/*les page dashboard, register et login*/
+/* Container centré pour login/register */
+.center-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* toute la hauteur de la page */
+  background-color: #000000;
+}
+
+.form-box {
+  background-color: #000000;
+  padding: 2rem;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  width: 100%;
+  max-width: 400px;
+  position: relative;
+  z-index: 2;
+}
+
+.form-box h1 {
+  text-align: center;
+  margin-bottom: 1.5rem;
+  z-index: 10;
+}
+
+.form-box input {
+  width: 100%;
+  padding: 0.75rem;
+  margin-bottom: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.form-box button {
+  width: 100%;
+  padding: 0.75rem;
+  background-color: #7708d2;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.form-box button:hover {
+  background-color: #7708d2;
+}
+
+.form-box p {
+  margin-top: 1rem;
+  text-align: center;
+  color: #333;
 }
