--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,22 +1,11 @@
-/* .page {
-  --gray-rgb: 0, 0, 0;
-  --gray-alpha-200: rgba(var(--gray-rgb), 0.08);
-  --gray-alpha-100: rgba(var(--gray-rgb), 0.05);
-
-  --button-primary-hover: #383838;
-  --button-secondary-hover: #f2f2f2;
-
-  display: grid;
-  grid-template-rows: 20px 1fr 20px;
-  align-items: center;
-  justify-items: center;
-  min-height: 50svh;
-  padding: 20px;
-  gap: 20px;
+ .page {  
   font-family: var(--font-geist-sans);
-} */
+} 
+
 .hero{
   min-height: 100vh;
+  font-family: var(--font-geist-sans);
+  /* garde tes autres styles ici */
  }
 
 
